--- a/StewardClient/src/app/pages/tools/pages/builders-cup-calendar/components/builders-cup-calendar-view/steelhead/steelhead-builders-cup-calendar-view.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/builders-cup-calendar/components/builders-cup-calendar-view/steelhead/steelhead-builders-cup-calendar-view.component.scss
@@ -1,55 +1,5 @@
 @import '/src/styles/mixins';
 
-.grid {
-  display: grid;
-  width: 200px;
-  gap: 2px;
-
-  &.left {
-    grid-template-columns: 10px 5px 5px auto;
-  }
-
-  &.center {
-    grid-template-columns: 5px 10px 5px auto;
-  }
-
-  &.right {
-    grid-template-columns: 5px 5px 10px auto;
-  }
-
-  .left {
-    grid-column: 1;
-  }
-
-  .center {
-    grid-column: 2;
-  }
-
-  .right {
-    grid-column: 3;
-  }
-
-  .large {
-    grid-row: span 2;
-  }
-
-  .tile {
-    background-color: app-color-default($app-accent);
-  }
-
-  .filler {
-    background-color: gray;
-    grid-row: 1 / last-line;
-    border: none;
-    margin-bottom: 2px;
-  }
-
-  .annotation {
-    line-height: 12px;
-    font-size: 12px;
-  }
-}
-
 ::ng-deep .multiline-tooltip.multiline-tooltip.multiline-tooltip {
   white-space: pre-line;
   background: black;
@@ -58,14 +8,6 @@
 .center-text {
   display: flex;
   justify-content: center;
-}
-
-div.tile-preview {
-  min-width: 30px;
-  max-width: 30px;
-  min-height: 30px;
-  height: 100%;
-  background: lime;
 }
 
 .calendar-view-switch {
@@ -145,39 +87,6 @@ div.tile-preview {
 
   > * {
     padding-left: 0.5em;
-    cursor: pointer;
+    //cursor: pointer;
   }
-}
-
-.tile-column {
-  border-left: 4px solid;
-  margin-bottom: 1px;
-
-  &.day-event-badge {
-    background-color: app-color-darker($app-background);
-  }
-
-  &.tile-column-left {
-    border-color: #5a0a33;
-  }
-
-  &.tile-column-center {
-    border-color: #ff66fd;
-  }
-
-  &.tile-column-right {
-    border-color: #ff8735;
-  }
-}
-
-:host ::ng-deep .event-column-left {
-  background-color: #5a0a33;
-}
-
-:host ::ng-deep .event-column-center {
-  background-color: #ff66fd;
-}
-
-:host ::ng-deep .event-column-right {
-  background-color: #ff8735;
 }
