properly build and utilize CSS class, need color colections for 1-4

--- a/StewardClient/src/app/pages/tools/pages/builders-cup-calendar/components/builders-cup-calendar-view/steelhead/steelhead-builders-cup-calendar-view.component.html
+++ b/StewardClient/src/app/pages/tools/pages/builders-cup-calendar/components/builders-cup-calendar-view/steelhead/steelhead-builders-cup-calendar-view.component.html
@@ -84,6 +84,7 @@
       <div
         *ngFor="let event of day.events"
         matTooltip="{{ event.name }}"
+        class="{{event.cssClass}}"
       >
         {{ event.title }}
       </div>
