--- a/StewardClient/src/app/pages/tools/pages/builders-cup-calendar/components/builders-cup-calendar-view/steelhead/steelhead-builders-cup-calendar-view.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/builders-cup-calendar/components/builders-cup-calendar-view/steelhead/steelhead-builders-cup-calendar-view.component.scss
@@ -1,4 +1,5 @@
 @import '/src/styles/mixins';
+@import '../../../styles/builders-cup-unique-colors.scss';
 
 ::ng-deep .multiline-tooltip.multiline-tooltip.multiline-tooltip {
   white-space: pre-line;
