--- a/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-stats/leaderboard-stats.component.html
+++ b/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-stats/leaderboard-stats.component.html
@@ -3,7 +3,7 @@
     <button
       mat-card-avatar
       mat-icon-button
-      [matTooltip]="expanded ? 'Collpase leaderboard stats' : 'Expand leaderboard stats'"
+      [matTooltip]="expanded ? 'Collapse leaderboard stats' : 'Expand leaderboard stats'"
       (click)="expanded = !expanded"
     >
       <mat-icon *ngIf="!expanded">expand_more</mat-icon>
