--- a/StewardClient/src/app/pages/tools/pages/user-group-management/components/create-user-group/create-user-group.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-group-management/components/create-user-group/create-user-group.component.html
@@ -18,7 +18,7 @@
       monitorWarnSnackbar
     >
       <span [matTooltip]="!userHasWritePerms ? incorrectPermsTooltip : null">
-        Create <button-spinner [monitor]="monitor" defaultIcon="trash"></button-spinner>
+        Create <button-spinner [monitor]="monitor"></button-spinner>
       </span>
     </button>
   </form>
