--- a/StewardClient/src/styles/global/steward-layout/standard-form.scss
+++ b/StewardClient/src/styles/global/steward-layout/standard-form.scss
@@ -25,6 +25,11 @@
       align-items: flex-start;
     }
 
+    // align element to start from the right instead of the left
+    &.sf-right {
+      justify-content: flex-end;
+    }
+
     // get the spacing right
     margin: -1em;
     > * {
