--- a/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
+++ b/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
@@ -1,5 +1,14 @@
 <div class="sf-wrapper">
-  <div class="sf-horizontal" *ngIf="ugcHidingSupported">
+  <div class="sf-horizontal sf-right" *ngIf="ugcHidingSupported">
+    Click on a row to select
+    <button
+      mat-stroked-button
+      color="primary"
+      [disabled]="selectedUgcs?.length <= 0"
+      (click)="unselectAllUgcItems()"
+    >
+      Unselect all
+    </button>
     <button
       mat-raised-button
       color="warn"
@@ -15,9 +24,14 @@
     >
       <span [ngPlural]="selectedUgcs?.length">
         Hide {{ selectedUgcs?.length }}
-        <ng-template ngPluralCase="=1">Ugc</ng-template>
-        <ng-template ngPluralCase="other">Ugcs</ng-template>
+        <ng-template ngPluralCase="=1">Ugc </ng-template>
+        <ng-template ngPluralCase="other">Ugcs </ng-template>
       </span>
+      <mat-spinner
+        *ngIf="hideUgcMonitor.isActive"
+        class="force-inline-2x"
+        [matTooltip]="hideUgcMonitor.label + ' in progress'"
+      ></mat-spinner>
     </button>
     <mat-checkbox
       #verifyCheckboxHide
@@ -28,14 +42,13 @@
     >
       Verify Hide
     </mat-checkbox>
-    <div class="failed-hide-ugc" *ngIf="failedHideUgcs">
-      <standard-copy [text]="failedHideUgcs" [alwaysShowIcon]="true">
-        Failed to hide some or all UGC items
-      </standard-copy>
-    </div>
+  </div>
+  <div class="sf-horizontal sf-right failed-hide-ugc" *ngIf="failedHideUgcs">
+    <standard-copy [text]="failedHideUgcs" [alwaysShowIcon]="true">
+      Failed to hide some or all UGC items
+    </standard-copy>
   </div>
 </div>
-<h5 *ngIf="useExpandoColumnDef">* Click on a row to expand its details.</h5>
 <div class="table-wide-actions" *ngIf="displayTableWideActions">
   <button
     mat-stroked-button
@@ -80,7 +93,9 @@
         <li><b>Access Level:</b> {{ entry.isPublic ? 'Public' : 'Private' }}</li>
         <li><b>Car:</b> {{ entry.carDescription }}</li>
         <li><b>Share Code:</b> {{ entry.shareCode || 'N/A' }}</li>
-        <li><b>Id:</b> {{ entry.id }}</li>
+        <li>
+          <standard-copy [text]="entry.id"><b>Id:</b> {{ entry.id }}</standard-copy>
+        </li>
       </ul>
     </td>
   </ng-container>
@@ -130,16 +145,6 @@
     <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let entry">
       <div class="inline-buttons">
-        <button
-          mat-stroked-button
-          color="primary"
-          clickStop
-          [cdkCopyToClipboard]="entry.id"
-          class="ignore-min-size"
-          matTooltip="Copy the UGC item's id"
-        >
-          Id <mat-icon>content_copy</mat-icon>
-        </button>
         <ugc-download-button [item]="entry"></ugc-download-button>
       </div>
       <div class="inline-buttons">
@@ -193,15 +198,20 @@
     </td>
   </ng-container>
 
-  <ng-container matColumnDef="selectRowCheckBox">
+  <ng-container matColumnDef="expandButton">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let entry">
-      <mat-checkbox
-        matTooltip="Check to select the ugc"
-        aria-label="Check to select the ugc"
-        (change)="onRowSelected(entry)"
+      <button
+        class="ignore-min-size"
+        clickStop
+        mat-card-avatar
+        mat-icon-button
+        [matTooltip]="expandedElement === entry ? 'Collapse UGC details' : 'Expand UGC details'"
+        (click)="expandedElement = expandedElement !== entry ? entry : null"
       >
-      </mat-checkbox>
+        <mat-icon *ngIf="expandedElement !== entry">expand_more</mat-icon>
+        <mat-icon *ngIf="expandedElement === entry">expand_less</mat-icon>
+      </button>
     </td>
   </ng-container>
 
@@ -214,7 +224,9 @@
       >
         <ul>
           <div>
-            <li><b>Id:</b> {{ entry.id }}</li>
+            <li>
+              <standard-copy [text]="entry.id"><b>Id:</b> {{ entry.id }}</standard-copy>
+            </li>
             <li><b>Share Code:</b> {{ entry.shareCode || 'N/A' }}</li>
             <li><b>Popularity:</b> {{ entry.popularityBucket }}/5</li>
             <li><b>Likes:</b> {{ entry.timesLiked }}</li>
@@ -251,7 +263,8 @@
     [class.border-bottom]="!useExpandoColumnDef"
     [class.cursor-pointer]="useExpandoColumnDef"
     [class.is-featured-item]="element.featuredByT10"
-    (click)="expandedElement = expandedElement !== element ? element : null"
+    [class.selected]="element.selected"
+    (click)="onRowSelected(element)"
   ></tr>
   <ng-container *ngIf="useExpandoColumnDef">
     <tr
