--- a/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.scss
+++ b/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.scss
@@ -77,10 +77,6 @@ table {
     }
   }
 
-  ugc-download-button {
-    margin-left: $gap-small;
-  }
-
   .is-featured-item {
     background-color: $table-tr-hover;
   }
@@ -109,4 +105,10 @@ img {
 
 .failed-hide-ugc {
   color: app-color-default($app-warn);
+}
+
+.mat-row {
+  &.selected {
+    background-color: $table-tr-hover;
+  }
 }
