add monitor to home page when waiting for user permissions to load tiles

--- a/StewardClient/src/app/pages/tools/pages/home/home.component.html
+++ b/StewardClient/src/app/pages/tools/pages/home/home.component.html
@@ -45,7 +45,7 @@
   </div>
 </div>
 
-<mat-tab-group>
+<mat-tab-group *waitForMonitor="permInitializationActionMonitor">
   <mat-tab>
     <ng-template mat-tab-label>
       Your Tools
