--- a/StewardClient/src/app/shared/views/credit-history/credit-history.component.html
+++ b/StewardClient/src/app/shared/views/credit-history/credit-history.component.html
@@ -1,7 +1,26 @@
 <mat-card>
-  <mat-card-title-group>
+  <mat-card-header class="sf-header">
     <mat-card-title>Credit History</mat-card-title>
     <mat-card-subtitle>{{ gameTitle }}</mat-card-subtitle>
+    <div class="sf-spacer"></div>
+    <button
+      class="filter-search"
+      mat-raised-button
+      color="primary"
+      matTooltip="Search Public UGC"
+      [disabled]="!formGroup.valid"
+      [monitor]="retrieveCreditUpdatesMonitor"
+      stateManager
+      monitorDisable
+      monitorWarnSnackbar
+    >
+    <!--
+      (click)="searchUgc()"
+     -->
+      Search
+      <button-spinner defaultIcon="search" [monitor]="retrieveCreditUpdatesMonitor"></button-spinner>
+      <!--  -->
+    </button>
     <help-popover-icon cardTitle="Credit History" confluenceName="Credit History Card">
       <p>Credit history is recovered from logs and is displayed from oldest to newest.</p>
       <p>
@@ -9,8 +28,12 @@
         together.
       </p>
     </help-popover-icon>
-  </mat-card-title-group>
+  </mat-card-header>
   <mat-card-content>
+    <credit-update-sort-options
+    [formControl]="formControls.sortOptions">      
+    </credit-update-sort-options>
+
     <ng-container *ngIf="!isLoading && !loadError; else failstate">
       <mat-expansion-panel *ngIf="xpAnalysisDates">
         <mat-expansion-panel-header color="warn">
