--- a/StewardClient/src/app/pages/tools/pages/playfab/components/playfab-builds-management/playfab-builds-management.component.html
+++ b/StewardClient/src/app/pages/tools/pages/playfab/components/playfab-builds-management/playfab-builds-management.component.html
@@ -4,8 +4,37 @@
     <mat-card-subtitle>Set tool availability pre & post release</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
+    <div class="filters">
+      <form [formGroup]="filterFormGroup">
+        <mat-form-field>
+          <mat-label>Filter Builds</mat-label>
+          <input
+            matInput
+            [formControl]="filterFormControls.nameOrId"
+            [disabled]="getPlayFabBuildsAndLocksMonitor.isActive"
+          />
+          <button
+            matSuffix
+            mat-icon-button
+            clickStop
+            (click)="filterFormControls.nameOrId.setValue(null)"
+            matTooltip="Clear text filter"
+          >
+            <mat-icon>close</mat-icon>
+          </button>
+        </mat-form-field>
+
+        <div>
+          <mat-button-toggle-group [formControl]="filterFormControls.lockStatus" [value]="true">
+            <mat-button-toggle [value]="LockFilterType.All">All</mat-button-toggle>
+            <mat-button-toggle [value]="LockFilterType.Locked">Locked</mat-button-toggle>
+            <mat-button-toggle [value]="LockFilterType.Unlocked">Unlocked</mat-button-toggle>
+          </mat-button-toggle-group>
+        </div>
+      </form>
+    </div>
     <div [hidden]="buildsTable.data?.length <= 0">
-      <mat-paginator [pageSize]="25" [pageSizeOptions]="[25, 50, 100]" showFirstLastButtons>
+      <mat-paginator [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]" showFirstLastButtons>
       </mat-paginator>
     </div>
     <ng-container *waitForMonitor="getPlayFabBuildsAndLocksMonitor">
@@ -51,15 +80,15 @@
                 </td>
               </tr>
               <tr>
-                <th>Reason:</th>
-                <td>
-                  {{ item.lock.reason }}
-                </td>
-              </tr>
-              <tr>
                 <th>Date:</th>
                 <td>
                   {{ item.lock.dateCreatedUtc | utcDate: 'short' }}
+                </td>
+              </tr>
+              <tr>
+                <th>Reason:</th>
+                <td>
+                  {{ item.lock.reason }}
                 </td>
               </tr>
             </table>
@@ -80,7 +109,11 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="buildsTableColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: buildsTableColumns"></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; columns: buildsTableColumns"
+          [class.is-locked]="!!row.lock"
+        ></tr>
       </table>
     </ng-container>
   </mat-card-content>
