init work being able to configure UGC feature status

--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -38,9 +38,7 @@
               [permissionAttribute]="featurePermAttribute"
               [permissionTitle]="gameTitle"
             >
-              <span [matTooltip]="featureMatTooltip">{{
-                ugcItem?.featuredByT10 ? 'Edit Featured Status' : 'Set Featured Status'
-              }}</span>
+              <span [matTooltip]="featureMatTooltip">Change Featured Status</span>
             </button>
             <div *waitForMonitor="getReportReasonsMonitor">
               <mat-form-field
