--- a/StewardClient/src/app/shared/views/credit-history/credit-history.component.html
+++ b/StewardClient/src/app/shared/views/credit-history/credit-history.component.html
@@ -29,12 +29,7 @@
     </credit-update-sort-options>
 
     <ng-container *ngIf="!isLoading && !loadError; else failstate">
-      <mat-expansion-panel
-        *ngIf="
-          sortOptions.column !== columnOptions.Timestamp ||
-          sortOptions.direction !== directionOptions.Ascending
-        "
-      >
+      <mat-expansion-panel *ngIf="displayTrendAnalysisDisabled">
         <mat-expansion-panel-header color="warn">
           <mat-panel-title>
             Backwards XP
