updating UI to support new UGC featuring configurations

--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/sunrise-lookup/sunrise-lookup.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/sunrise-lookup/sunrise-lookup.component.scss
@@ -1,9 +1,15 @@
+@import '/src/styles/mixins';
+
 model-dump {
   display: flex;
   flex-flow: row wrap;
   & > * {
     flex-grow: 1;
   }
+}
+
+model-dump-flags {
+  margin-bottom: $gap-medium;
 }
 
 :host ::ng-deep .images {
