--- a/StewardClient/src/app/shared/views/ugc-search-filters/ugc-search-filters.component.html
+++ b/StewardClient/src/app/shared/views/ugc-search-filters/ugc-search-filters.component.html
@@ -6,6 +6,7 @@
           class="player-selection-max-width"
           [disableLookupTypes]="['t10Id']"
           [allowSelection]="false"
+          [specialIdentitiesAllowed]="this.serviceContract.specialIdentitiesAllowed"
           [rejectionFn]="serviceContract.rejectionFn"
           (found)="playerIdentityFound($event)"
         ></player-selection-single>
