hide old auctions tab

--- a/StewardClient/src/app/pages/tools/pages/user-details/sunrise/sunrise-user-details.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-details/sunrise/sunrise-user-details.component.html
@@ -47,11 +47,12 @@
           <sunrise-player-notifications [identity]="identity"></sunrise-player-notifications>
         </div>
       </mat-tab>
-      <mat-tab label="Auctions">
+      <!-- TODO: Remove after a couple weeks if no one shouts (2023/02/09) -->
+      <!-- <mat-tab label="Auctions">
         <div class="tab-container">
           <sunrise-player-auctions [identity]="identity"></sunrise-player-auctions>
         </div>
-      </mat-tab>
+      </mat-tab> -->
       <mat-tab>
         <div class="tab-container">
           <ng-template mat-tab-label>
