--- a/StewardClient/src/app/pages/tools/pages/racers-cup/components/racers-cup-series-modal/racers-cup-series-modal.component.html
+++ b/StewardClient/src/app/pages/tools/pages/racers-cup/components/racers-cup-series-modal/racers-cup-series-modal.component.html
@@ -27,6 +27,10 @@
             <h3>Qualification Options</h3>
             <table class="info-table full-width">
               <tr>
+                <th>Allowed Cars</th>
+                <td>{{ selectedEvent?.meta?.carRestrictions }}</td>
+              </tr>
+              <tr>
                 <th>Lap Limit</th>
                 <td>
                   {{
