move sync users db to select user from list component

--- a/StewardClient/src/app/pages/tools/pages/permission-management/components/select-user-from-list/select-user-from-list.component.html
+++ b/StewardClient/src/app/pages/tools/pages/permission-management/components/select-user-from-list/select-user-from-list.component.html
@@ -3,7 +3,7 @@
   color="primary"
   class="sync-users-button"
   (click)="syncUsersDb()"
-  [disabled]="!selectUserComponent?.getUsersActionMonitor?.isDone"
+  [disabled]="!getUsersActionMonitor?.isDone"
   [monitor]="postSyncUsersDbActionMonitor"
   stateManager
   monitorDisable
