--- a/StewardClient/src/app/pages/tools/pages/permission-management/components/team-permission-management/team-permission-management.component.html
+++ b/StewardClient/src/app/pages/tools/pages/permission-management/components/team-permission-management/team-permission-management.component.html
@@ -1,1 +1,17 @@
-<div>Teams component</div>
+<div class="steward-layout-with-sidebar">
+  <div class="steward-layout-sidebar-group">
+    <div class="steward-layout-pane">
+      <create-new-team></create-new-team>
+    </div>
+  </div>
+
+  <div class="steward-layout-pane steward-layout-fill reference-inventory">
+    <mat-card class="steward-layout-sticky-scroll">
+      <mat-card-header class="sf-header">
+        <mat-card-title>Manage Team</mat-card-title>
+        <mat-card-subtitle>Add and remove users within as team</mat-card-subtitle>
+        <div class="sf-spacer"></div>
+      </mat-card-header>
+    </mat-card>
+  </div>
+</div>
